// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params decorators should add parameter metadata to a class when decorated with @params 1`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "cat",
      ],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "headers",
      ],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "consumerTag",
      ],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 2`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params and inherit 1`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "cat",
      ],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "headers",
      ],
      "handler": [Function],
    },
  ],
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "consumerTag",
      ],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params and inherit 2`] = `
[
  [
    [Function],
    ParamDecoratorFactory {
      "args": [
        "lollol",
      ],
      "handler": [Function],
    },
  ],
]
`;
